--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,15 @@
 			<artifactId>json-schema-validator</artifactId>
 			<version>5.5.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.4.1</version>
+		</dependency>
 	</dependencies>
 </project>
